--- a/HTML/travail_17.html
+++ b/HTML/travail_17.html
@@ -19,7 +19,7 @@
         <p>Voici quelques dessins r&eacute;alis&eacute; &agrave; l'aide de la tablette graphique.</p>
         
         <div id="sous_titre_1">
-            <h2>croquis tablette graphique</h2>  
+            <h2>Croquis tablette graphique</h2>  
         </div>  
 
             <div id="photo_1">                
