--- a/HTML/travail_19.html
+++ b/HTML/travail_19.html
@@ -21,7 +21,7 @@
         <p>Le but a &eacute;t&eacute; d'habiller un plan &agrave; l'aide du logiciel Photoshop.</p>
         
         <div id="sous_titre_1">
-            <h2>habillage d'un plan</h2>  
+            <h2>Habillage d'un plan</h2>  
         </div>  
 
             <div id="photo_1">                
