--- a/HTML/travail_20.html
+++ b/HTML/travail_20.html
@@ -21,7 +21,7 @@
         <p>Le but a &eacute;t&eacute; de cr&eacute;er le DCE de l'am&eacute;nagement de la zone de loisirs du Girlenhirsch en Alsace.</p>  
 
         <div id="sous_titre_1">
-            <h2>document technique plan de d&eacute;molition/protection</h2>  
+            <h2>Document technique plan de d&eacute;molition/protection</h2>  
         </div>
 
             <div id="photo_1">
@@ -31,7 +31,7 @@
             </div>
 
         <div id="sous_titre_2">
-            <h2>document technique plan de plantation: tranche conditionnelle</h2>  
+            <h2>Document technique plan de plantation: tranche conditionnelle</h2>  
         </div>
         
                 <div id="photo_2">
@@ -41,7 +41,7 @@
             </div>
 
         <div id="sous_titre_3">
-            <h2>document technique plan de plantation: tranche ferme</h2>  
+            <h2>Document technique plan de plantation: tranche ferme</h2>  
         </div>
         
                 <div id="photo_3">
